--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,3 +162,91 @@
 .resend-mail {
   display: inline-block;
 }
+
+/*--- 演習 ---*/
+.row:not(:first-child) {
+  margin-top: 20px;
+}
+.input-area {
+  box-sizing: border-box;
+  height: 36px;
+  width: 100%;
+  padding: 5px;
+  margin-top: 5px;
+  color: #545658;
+  font-size: 13px;
+  line-height: 2;
+  background-color: #fbfbfb;
+  border: 1px solid #d9d9d9;
+  border-radius: 3px;
+}
+.label-title {
+  display: block;
+  font-size: 12px;
+  color: #545658;
+}
+.caution {
+  color: #dd4b39;
+}
+
+/*--- name ---*/
+.name {
+  display: flex;
+}
+.name-content {
+  margin-left: 16px;
+}
+.name-content:first-child {
+  margin-left: 0;
+}
+
+/*--- sex ---*/
+.sex-contents {
+  display: flex;
+  color: #545658;
+  font-size: 16px;
+  margin-top: 5px;
+}
+.sex-content {
+  margin-left: 15px;
+  cursor: pointer;
+}
+.sex-content:first-child {
+  margin-left: 0;
+}
+.sex-input {
+  display: none;
+}
+/* radioボタンが選択された状態 */
+.sex-input:checked + .attr:after {
+  content: '';
+  position: absolute;
+  left: 4px;
+  top: 50%;
+  height: 8px;
+  width: 8px;
+  transform: translateY(-50%);
+  border-radius: 50%;
+  background-color: #01bfbd;
+}
+.attr {
+  position: relative;
+  display: inline-block;
+  padding: 3px 3px 3px 20px;
+}
+.attr::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 14px;
+  width: 14px;
+  background-color: #fbfbfb;
+  border: 1px solid #d9d9d9;
+  border-radius: 50%;
+}
+/*--- from ---*/
+.from-select {
+  outline: none;
+}
