--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,9 +164,12 @@
 }
 
 /*--- 演習 ---*/
+
+/* 共通 end */
 .row:not(:first-child) {
   margin-top: 20px;
 }
+
 .input-init {
   /* ブラウザごとのデフォルトスタイルを無効 */
   -moz-appearance: none;
@@ -180,6 +183,7 @@
   /* ユーザーが大きさを調整できるか */
   resize: none;
 }
+
 .input-area {
   box-sizing: border-box;
   height: 36px;
@@ -193,34 +197,43 @@
   border: 1px solid #d9d9d9;
   border-radius: 3px;
 }
+
 .input-area:focus {
   background-color: #fff;
   border-color: rgba(59, 133, 133, .4);
   box-shadow: 0 0 0 2px rgb(1 191 189 / 10%);
 }
+
 .label-title {
   display: block;
   font-size: 12px;
   color: #545658;
 }
+
 .caution {
   color: #dd4b39;
 }
+
 .sex input,
 .course input {
   display: none;
 }
+/* 共通スタイル end */
+
 
 /*--- name ---*/
 .name {
   display: flex;
 }
+
 .name-content {
   margin-left: 16px;
 }
+
 .name-content:first-child {
   margin-left: 0;
 }
+/* name end */
 
 /*--- sex ---*/
 .sex__contents {
@@ -229,18 +242,22 @@
   font-size: 16px;
   margin-top: 5px;
 }
+
 .sex__content {
   margin-left: 15px;
   cursor: pointer;
 }
+
 .sex__content:first-child {
   margin-left: 0;
 }
+
 .sex__content span {
   position: relative;
   display: inline-block;
   padding: 3px 3px 3px 20px;
 }
+
 .sex__content span::before {
   content: '';
   position: absolute;
@@ -253,6 +270,7 @@
   border: 1px solid #d9d9d9;
   border-radius: 50%;
 }
+
 .sex__input:checked + span::after {
   content: '';
   position: absolute;
@@ -264,6 +282,7 @@
   border-radius: 50%;
   background-color: #01bfbd;
 }
+/* sex end */
 
 
 /*--- from ---*/
@@ -271,6 +290,7 @@
   position: relative;
   margin-top: 8px;
 }
+
 .from-content::after {
   content: '';
   display: inline-block;
@@ -283,15 +303,19 @@
   border-right: 2px solid #d9d9d9;
   border-bottom: 2px solid #d9d9d9;
 }
+
 .from-select {
   outline: none;
 }
+/* from end */
+
 
 /*--- course ---*/
 .course__contents {
   display: flex;
   flex-direction: column;
 }
+
 /* 見本ではfirst-of-typeだが、連続した値なので下記を使用 */
 .course__content {
   margin-top: 10px;
@@ -301,11 +325,13 @@
 .course__content:first-child {
   margin-top: 5px;
 }
+
 /* spanにクラスをつけると見にくいのでカット */
 .course__content-text {
   position: relative;
   padding-left: 25px;
 }
+
 .course__content-text::before {
   content: '';
   position: absolute;
@@ -316,6 +342,7 @@
   margin-top: -8px;
   border: 1px solid #d9d9d9;
 }
+
 .course__content input:checked + .course__content-text:after {
   content: '';
   position: absolute;
@@ -328,11 +355,13 @@
   border-right: 3px solid #01bfbd;
   border-bottom: 3px solid #01bfbd;
 }
+/* course end */
 
 /*--- remarks(備考) ---*/
 .remarks .input-area {
   height: 100px;
 }
+/* remarks end */
 
 /*--- submit ---*/
 .submit-btn {
@@ -341,3 +370,4 @@
   color: #fff;
   border: 1px solid #01bfbd;
 }
+/* submit end */
