--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,7 +204,6 @@
 }
 
 .label-title {
-  display: block;
   font-size: 12px;
   color: #545658;
 }
@@ -224,17 +223,17 @@
   display: flex;
 }
 
-.name-content {
+.name__content {
   margin-left: 16px;
 }
 
-.name-content:first-child {
+.name__content:first-child {
   margin-left: 0;
 }
 /* --- */
 
 /*--- sex part ---*/
-.sex__contents {
+.sex__inner {
   display: flex;
   margin-top: 5px;
 }
@@ -249,7 +248,6 @@
 .sex__content:first-child {
   margin-left: 0;
 }
-/* --- */
 
 /* ラジオボタン */
 .radio-circle {
@@ -284,14 +282,13 @@
 /* --- */
 
 /*--- from part ---*/
-.from-content {
+.from__content {
   position: relative;
   margin-top: 8px;
 }
 
-.from-content::after {
+.from__content::after {
   content: '';
-  display: inline-block;
   position: absolute;
   right: 10px;
   top: 45%;
@@ -302,7 +299,7 @@
   border-bottom: 2px solid #d9d9d9;
 }
 
-.from-content .input-area {
+.from__content .input-area {
   margin-top: 0;
 }
 
@@ -333,11 +330,11 @@
 .course__content-text::after {
   content: '';
   position: absolute;
+  top: 50%;
 }
 
 .course__content-text::before {
   left: 0;
-  top: 50%;
   width: 15px;
   height: 15px;
   margin-top: -8px;
@@ -346,7 +343,6 @@
 
 .course__content input:checked + .course__content-text:after {
   left: 6px;
-  top: 50%;
   width: 8px;
   height: 16px;
   margin-top: -12px;
