--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -369,4 +369,10 @@
 .submit-btn:hover {
   background-color: #01a6a4;
 }
+
+.submit-btn:active {
+  background-color: #fff;
+  color: #01a6a4;
+  border-color: #d9d9d9;
+}
 /* --- */
